# llm-zoomcamp

./: Homework_Mod_2.code-workspace  agents.ipynb  rag_cleaned.ipynb
Homework_Mod_1/: README.md  homework.ipynb  main.py  pyproject.toml  rag_helper.py
Homework_Mod_2/: .gitignore  README.md  homework.ipynb  main.py  pyproject.toml
Homework_Mod_3/: README.md
Module_1/: notebook.ipynb  persistent_rag.ipynb  persistent_rag_ingest.ipynb  pyproject.toml  rag_helper.py
Module_2/: .gitignore  pyproject.toml  rag_helper.py  vec_search_pgvector.ipynb  vector_search.ipynb  vector_search_persistent.ipynb
Module_3/reports/: 3DzJkRVLUbyt4YTkKR1xjZ-research_report.md
